src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Inter+Tight:wght@200;400&display=swap");

* {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
}

a {
   color: var(--a);
}

body {
   background: var(--bg) !important;
   height: 100%;
   overflow: hidden;
   transition: background-color 0.5s ease, color 0.5s ease, fill 0.5s ease;
}

@keyframes fadeInfadeOut {
   0% {
      opacity: 0;
      animation-timing-function: cubic-bezier(0.25, 1.0, 1.0, 1.0);
   }

   40% {
      opacity: 1;
   }

   50% {
      opacity: 1;
   }

   60% {
      opacity: 1;
   }

   100% {
      opacity: 0;
      animation-timing-function: cubic-bezier(0.01, 1.0, 1.0, 1.0);
      visibility: hidden;
   }
}

@keyframes scale {

   from,
   to {
      transform: scale(0);
   }

   50% {
      transform: scale(1);
   }
}

@keyframes rotate {
   from {
      transform: rotate(0deg);
   }

   to {
      transform: rotate(180deg);
   }
}

ul {
   list-style: none;
}

li {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
}

.icons {
   display: flex;
   flex-wrap: wrap;
   justify-content: var(--flex-alignment);
   letter-spacing: 0;
   padding: 0;
   justify-content: center;
   align-items: center;
   text-align: center;
}

.icons li {
   position: relative;
   z-index: 1;
}

.icons li a {
   align-items: center;
   display: flex;
   justify-content: center;
}

.icons li a svg {
   display: block;
   position: relative;
}

/* .icons li a + svg {
   display: block;
   height: 100%;
   left: 0;
   pointer-events: none;
   position: absolute;
   top: 0;
   width: 100%;
   z-index: -1;
} */

.icons li a .label {
   display: none;
}

.icons.style1 {
   font-size: 1.75em;
   gap: 1.375rem;
}

/* .icons.style1 .n04 {
   width: 10rem;
   border-radius: 60px;
   font-size: 20px;
} */

.icons.style1 li a {
   border-radius: 100%;
   height: 2em;
   width: 2em;
   transition: transform 0.375s ease, color 0.375s ease,
      background-color 0.375s ease, border-color 0.375s ease;
}

.icons.style1 li a svg {
   height: 60%;
   width: 60%;
   transition: fill 0.375s ease;
}

.icons.style1 a svg {
   fill: #777777;
}

.icons.style1 a {
   border: solid 1px #777777;
   color: solid 1px #777777;
}

.icons.style1 a:hover {
   border-color: var(--fill) !important;
   color: var(--fill) !important;
}

.icons.style1 a:hover svg {
   fill: var(--fill) !important;
}

/* .icons.style1 li a + svg {
   transition: transform 0.375s ease, fill 0.375s ease, stroke 0.375s ease;
} */

.icons.style1 li a:hover {
   transform: scale(1.1125);
}

/* .icons.style1 li a:hover + svg {
   transform: scale(1.1125);
} */

#background {
   width: 100%;
   height: 100%;
}

.transitioning {
   opacity: 0;
}

.bg {
   position: fixed;
   width: 100%;
   height: 110vh !important;
   background-attachment: fixed !important;
   background-repeat: no-repeat !important;
   background-position: center center !important;
   background-size: cover !important;
   transition: opacity 0.5s ease;
   opacity: 0;
}

.bg.light-mode {
   background-image: url("/background2.jpg") !important;
   background-position: center -3.5em !important;
}

.bg.dark-mode {
   background-image: url("/sw.jpg") !important;
}

.parallax {
   display: block;
   justify-content: center;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%) !important;
}

.profile {
   position: relative !important;
   left: var(--left) !important;
   top: 50% !important;
   max-width: 25.625rem;
   background: #FBFBFB;
   box-shadow: 20px 20px 20px rgba(56, 56, 56, 0.306);
   border-radius: 10px;
   pointer-events: auto !important;
   transition: left 0.5s cubic-bezier(.26, 2, .46, .71);
}

.toggle-checkbox+.toggle-slot {
   position: absolute;
   top: -5em;
   left: 50%;
   transform: translateX(-50%);
   z-index: 10;
}

.profile.light-mode {
   --left: -80%;
}

.profile.dark-mode {
   --left: 80%;
}

.profile::before {
   content: "☆~";
   position: absolute;
   top: -65px;
   left: var(--profile-before-left);
   font-size: 49px;
   rotate: var(--profile-before-deg);
   color: var(--fill);
   animation: bob 4s ease-in-out infinite;
   transition: left 0.5s cubic-bezier(0.25, 1.25, 0.75, 1),
      rotate 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
}

.light-mode {
   --profile-before-left: -15%;
   --profile-before-deg: -25deg;
   --fill: #e98e8c;
   --a: #fe7585;
   --uwu: #000;
   --bullet-color: #d6dbf0;
   --bullet-background-color: #eceefb;
   --bullet-active-color: #FBFBFB;
}

.dark-mode {
   --profile-before-left: 100%;
   --profile-before-deg: 200deg;
   --fill: #868ac9;
   --a: #6065da;
   --uwu: #f7f8f3;
   --bullet-color: #a9b0e6;
   --bullet-background-color: #bfc5e7;
   --bullet-active-color: #c4cef1;
}

.profile::after {
   content: "";
   position: absolute;
   border: 2px dashed var(--fill);
   width: 100%;
   height: 100%;
   padding: 10px;
   left: -12px;
   top: -12px;
   align-items: center;
   justify-content: center;
   border-radius: 10px;
}

.profile>.magic {
   display: inline-block;
   position: relative;
   width: 100%;
   height: 100%;
   z-index: 999;
}

.profile>.magic>.magic-star {
   --size: clamp(20px, 1.5vw, 30px);
   animation: scale 1000ms ease forwards;
   display: block;
   height: var(--size);
   left: var(--star-left);
   position: absolute;
   top: var(--star-top);
   width: var(--size);
   z-index: 99999;
}

.profile>.magic>.magic-star>svg {
   animation: rotate 1000ms linear infinite;
   display: block;
   opacity: 0.5;
}

.profile>.magic>.magic-star>svg>path {
   fill: var(--fill);
}

@keyframes bob {

   0%,
   100% {
      transform: translate(0, 0px);
   }

   50% {
      transform: translate(0, -10px);
   }
}

.discord {
   pointer-events: none;
   border-bottom: 2px dashed #e1e1e1;
}

.about {
   display: block;
   padding: 20px;
   color: #777777;
   font-family: "Inter Tight", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-display: swap;
   /* letter-spacing: 0.04em; */
}

.about p {
   margin: 0;
}

.about h4 {
   color: var(--fill);
   margin-top: 0;
}

.centered {
   animation: 3s fadeInfadeOut;
   animation-fill-mode: forwards;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   font-family: "Inter Tight", sans-serif;
   font-style: normal;
   font-weight: 200;
   font-display: swap;
   font-size: 46px;
   letter-spacing: 0.04em;
   color: var(--uwu);
}

.centered span {
   will-change: filter;
}

@media only screen and (max-width: 1024px) {

   .profile.light-mode,
   .profile.dark-mode {
      --left: 0%;
   }
}

@media only screen and (max-width: 920px) {

   .profile.light-mode,
   .profile.dark-mode {
      --left: 0%;
   }
}

@media only screen and (max-width: 480px) {

   .profile.light-mode,
   .profile.dark-mode {
      --left: 0%;
   }
}

